<resources>
    <string name="app_name">Barbarossa-AB Portofolio</string>

    <string name="action_settings">Settings</string>

    <string name="main_title">My NanoDegree Apps</string>
    <string name="streamer_title">SPOTIFY STREAMER</string>
    <string name="scores_title">SCORES APP</string>
    <string name="library_title">LIBRARY_APP</string>
    <string name="build_it_bigger_title">BUILD IT BIGGER</string>
    <string name="bacon_reader_title">BACON READER</string>
    <string name="capstone_title">CAPSTONE:MY OWN APP</string>

</resources>
