<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView"
        android:textColor="#ff720ba5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/orange_btn"
        android:text="@string/streamer_title"
        android:id="@+id/button"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="clickSpotifyStreamer"/>

    <Button
        style="@style/orange_btn"
        android:text="@string/scores_title"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="clickScoresApp"/>

    <Button
        style="@style/orange_btn"
        android:text="@string/library_title"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="clickLibraryApp"/>

    <Button
        style="@style/orange_btn"
        android:text="@string/build_it_bigger_title"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="clickBuildItBigger"/>

    <Button
        style="@style/orange_btn"
        android:text="@string/bacon_reader_title"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="clickBaconReader"/>

    <Button
        style="@style/red_btn"
        android:text="@string/capstone_title"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="clickCapstoneApp"/>

</RelativeLayout>
